<resources>
    <string name="app_name">socialMedia</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="my_followers">My Followers</string>
    <string name="add_post">Add Post</string>
    <string name="select">Select</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="caption_hint">Write Caption..</string>
    <string name="my_page">My Page</string>
    <string name="search_user">Search User</string>
    <string name="home_page">Home Page</string>
</resources>