<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu"
        android:title="settings"
        android:icon="@drawable/menu"
        app:showAsAction="always">

        <menu
            android:id="@+id/menu_item">
            <item
                android:id="@+id/edit_profile"
                android:title="@string/edit_profile"/>

            <item
                android:id="@+id/add_posts"
                android:title="@string/add_post"/>
            <item
                android:id="@+id/my_page"
                android:title="@string/my_page"/>
            <item
                android:id="@+id/search_user"
                android:title="@string/search_user"/>
            <item
                android:id="@+id/logout"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>
